Added a space in the "Meet Our Team in the nation" heading.

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         </table>
 
         <div class="team-section">
-            <h3>Meet Our Team</h3>
+            <h3>Meet Our Team in the nation</h3>
             <p>Our team is dedicated to simplifying the way you share your professional and social information. Venus is developed with the goal of making online networking as seamless as possible.</p>
         </div>
     </section>
